--- a/index.html
+++ b/index.html
@@ -24,13 +24,30 @@ div img {
     bottom:0;
     margin:auto;
 }
-body {
-  background-image: url('purple.png');
+
+#bg {
+  position: fixed; 
+  top: -50%; 
+  left: -50%; 
+  width: 200%; 
+  height: 200%;
+}
+#bg img {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 50%;
+  min-height: 50%;
 }
 </style>
 </head>
 <body>
-
+<div id="bg">
+  <img src="purple.png" alt="">
+</div>
 <div><img src="image0.gif" alt="Paris" style="width:25%;"></div>
 
 </body>
